# handler/showOpening.go
@@ -8,6 +8,19 @@ import (
 	"github.com/nathanfabio/goOpportunities/schemas"
 )
 
+
+// @BasePath /api/v1
+
+// @Summary Show Opening
+// @Description Show Opening
+// @Tags openings
+// @Accept json
+// @Produce json
+// @Param id query string  true "Opening identification"
+// @Success 200 {object} ShowOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
